YES YES! We will build faster! - solved problem with flickering on IE and Chrome

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,7 @@ header {
   color: white;
   width: 100%;
   height: 100vh;
+  max-height: 1100px;
   background-image: url("../icons/bloodmarine.png");
   background-attachment: fixed;
   background-repeat: no-repeat;
