--- a/css/partials/_header.scss
+++ b/css/partials/_header.scss
@@ -20,7 +20,7 @@ header {
     width: 100%;
     //if you are using horizontal dev tools disable height:100vh and set optimal HD height - height:990px
     height: 100vh;
-    // max-height: 1100px;
+    max-height: 1100px;
     //height:990px; optimal height for hd resolution
     // height:1100px;//original height from template
     background-image: url("../icons/bloodmarine.png");
